// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EffectivenessMeasurementRow Component Rendering renders correctly with default props 1`] = `
<tr
  className="effectiveness-measurement-row"
>
  <td
    className="effectiveness-measurement-question-cell"
  >
    <i
      className="fa-solid fa-magnifying-glass"
    />
      
    <span
      style={
        {
          "fontWeight": "bolder",
        }
      }
    >
      Test Question
    </span>
    <br />
    Test subtitle for the question
  </td>
  <td
    className="effectiveness-measurement-tooltip-cell"
  >
    <StyledTooltipHostBase
      calloutProps={
        {
          "gapSpace": 0,
        }
      }
      content={
        <div
          dangerouslySetInnerHTML={
            {
              "__html": "This is a test tooltip",
            }
          }
        />
      }
      hostClassName="toggle-carousel-button-tooltip-wrapper"
    >
      <CustomizedDefaultButton
        className="contextual-menu-button hide-mobile"
        iconProps={
          {
            "iconName": "Error",
          }
        }
      />
    </StyledTooltipHostBase>
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="1"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="2"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="3"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="4"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="5"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="6"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="7"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="8"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="9"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="10"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
</tr>
`;

exports[`EffectivenessMeasurementRow Component Rendering renders correctly with votes data 1`] = `
<tr
  className="effectiveness-measurement-row"
>
  <td
    className="effectiveness-measurement-question-cell"
  >
    <i
      className="fa-solid fa-magnifying-glass"
    />
      
    <span
      style={
        {
          "fontWeight": "bolder",
        }
      }
    >
      Test Question
    </span>
    <br />
    Test subtitle for the question
  </td>
  <td
    className="effectiveness-measurement-tooltip-cell"
  >
    <StyledTooltipHostBase
      calloutProps={
        {
          "gapSpace": 0,
        }
      }
      content={
        <div
          dangerouslySetInnerHTML={
            {
              "__html": "This is a test tooltip",
            }
          }
        />
      }
      hostClassName="toggle-carousel-button-tooltip-wrapper"
    >
      <CustomizedDefaultButton
        className="contextual-menu-button hide-mobile"
        iconProps={
          {
            "iconName": "Error",
          }
        }
      />
    </StyledTooltipHostBase>
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="1"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="2"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="3"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="4"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="5"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleFill",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="6"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="7"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="8"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="9"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
  <td>
    <CustomizedDefaultButton
      aria-label="10"
      className="contextual-menu-button hide-mobile effectivemess-measurement-voting-button"
      iconProps={
        {
          "iconName": "CircleRing",
        }
      }
      onClick={[Function]}
    />
  </td>
</tr>
`;
